--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Dog" />
+
+        <RadioButton
+            android:id="@+id/agoat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Goat" />
     </RadioGroup>
 
     <TextView
@@ -87,11 +94,11 @@
             />
 
         <Button
-            android:id="@+id/cancel"
+            android:id="@+id/reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="Cancel"
+            android:text="Reset"
 
             />
     </LinearLayout>
